--- a/docker-compose/docker-compose.yml
+++ b/docker-compose/docker-compose.yml
@@ -1,33 +1,36 @@
 version: '3'
 
 services:
+  caddy:
+    image: caddy
+    restart: always
+    ports:
+      - "80:80"
+      - "443:443"
+    volumes:
+      - ./caddy/Caddyfile:/etc/caddy/Caddyfile
+      - caddy_data:/data
   app:
+    depends_on:
+      - caddy
     image: chenzhaoyu94/chatgpt-web # 总是使用latest,更新时重新pull该tag镜像即可
     ports:
-      - 3002:3002
+      - 3002
     environment:
       # 二选一
-      OPENAI_API_KEY: xxxx
+      OPENAI_API_KEY: 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
       # 二选一
-      OPENAI_ACCESS_TOKEN: xxxxxx
+      #OPENAI_ACCESS_TOKEN: xxxxxx
       # API接口地址，可选，设置 OPENAI_API_KEY 时可用
-      OPENAI_API_BASE_URL: xxxx
+      #OPENAI_API_BASE_URL: xxxx
       # 反向代理，可选
-      API_REVERSE_PROXY: xxx
+      #API_REVERSE_PROXY: xxx
       # 超时，单位毫秒，可选
       TIMEOUT_MS: 60000
       # Socks代理，可选，和 SOCKS_PROXY_PORT 一起时生效
-      SOCKS_PROXY_HOST: xxxx
+      #SOCKS_PROXY_HOST: xxxx
       # Socks代理端口，可选，和 SOCKS_PROXY_HOST 一起时生效
-      SOCKS_PROXY_PORT: xxxx
-  nginx:
-    build: nginx
-    image: chatgpt/nginx
-    ports:
-      - '80:80'
-    expose:
-      - '80'
-    volumes:
-      - ./nginx/html/:/etc/nginx/html/
-    links:
-      - app
+      #SOCKS_PROXY_PORT: xxxx
+
+volumes:
+  caddy_data:
