1. 隐藏端口； 2 修改密码

--- a/docker-compose/caddy/Caddyfile
+++ b/docker-compose/caddy/Caddyfile
@@ -1,4 +1,6 @@
 tenbagger.app {
-  basicauth /laojoe Goodpass1234!
+  basicauth {
+	laojoe $2a$14$nmK73f7tO.3Fwr8a30AcXeqHEpV.GBOpefNEV47mJp.WZphilJ8v2
+  } 
   reverse_proxy app:3002
 }
