--- a/docker-compose/docker-compose.yml
+++ b/docker-compose/docker-compose.yml
@@ -14,7 +14,7 @@ services:
     depends_on:
       - caddy
     image: chenzhaoyu94/chatgpt-web # 总是使用latest,更新时重新pull该tag镜像即可
-    ports:
+    expose:
       - 3002
     environment:
       # 二选一
