--- a/docker-compose/docker-compose.yml
+++ b/docker-compose/docker-compose.yml
@@ -13,12 +13,13 @@ services:
   app:
     depends_on:
       - caddy
-    image: chenzhaoyu94/chatgpt-web # 总是使用latest,更新时重新pull该tag镜像即可
+    #image: chenzhaoyu94/chatgpt-web # 总是使用latest,更新时重新pull该tag镜像即可
+    build: ../
     expose:
       - 3002
     environment:
       # 二选一
-      OPENAI_API_KEY: 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
+      OPENAI_API_KEY: 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
       # 二选一
       #OPENAI_ACCESS_TOKEN: xxxxxx
       # API接口地址，可选，设置 OPENAI_API_KEY 时可用
